--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<phpunit colors="true" strict="true" bootstrap="vendor/autoload.php">
+<phpunit colors="true" bootstrap="vendor/autoload.php" verbose="true">
   <testsuites>
     <testsuite name="Codedrop">
       <directory>./tests/</directory>
+      <file>tests/Codedrop/TestCommand.php</file>
     </testsuite>
   </testsuites>
   <filter>
