Moved CircleConfig into new namespace, added additional Progress command.

--- a/circle-cli.yml
+++ b/circle-cli.yml
@@ -37,3 +37,10 @@ endpoints:
       - branch
       - subject
       - status
+
+  get_single_build:
+    display:
+      - build_num
+      - build_url
+      - committer_name
+      - subject
