--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     "symfony/yaml": "2.6.*",
     "guzzlehttp/guzzle": "~5.0",
     "pimple/pimple": "~3.0",
-    "phpunit/phpunit": "4.6.*"
+    "phpunit/phpunit": "4.6.*",
+    "mikey179/vfsStream": "1.5.0"
   },
   "autoload": {
     "psr-0": {
