--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -9,7 +9,7 @@
   </testsuites>
   <filter>
     <whitelist>
-        <directory suffix=".php">./src/</directory>
+        <directory suffix=".php">./src/Codedrop/</directory>
     </whitelist>
   </filter>
 </phpunit>
