--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,9 @@
     "mikey179/vfsStream": "1.5.0"
   },
   "autoload": {
-    "psr-0": {
-      "": "src/"
+    "psr-4": {
+      "Circle\\": "src/",
+      "Circle\\Tests\\": "tests/"
     }
   },
   "extra": {
