--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,10 @@
     "symfony/console": "2.6.*",
     "symfony/yaml": "2.6.*",
     "guzzlehttp/guzzle": "~5.0",
-    "pimple/pimple": "~3.0",
-    "phpunit/phpunit": "4.6.*",
+    "pimple/pimple": "~3.0"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "~4.0",
     "mikey179/vfsStream": "1.5.0"
   },
   "autoload": {
