Added license to composer file.

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
   "name": "codedrop/circle-cli",
   "description": "A CLI utility built with Symfony Console to query Circle CI projects.",
+  "license": "GPL-2.0+",
   "authors": [
     {
       "name": "Ben Dougherty",
