--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
   },
   "require-dev": {
     "phpunit/phpunit": "~4.0",
-    "mikey179/vfsStream": "1.5.0"
+    "mikey179/vfsStream": "1.5.0",
+    "sami/sami": "~3.0"
   },
   "autoload": {
     "psr-4": {
