--- a/circle.yml
+++ b/circle.yml
@@ -4,6 +4,11 @@ machine:
   php:
     version: 5.5.11
 
+general:
+  branches:
+    ignore:
+      - gh-pages
+
 dependencies:
   cache_directories:
     - vendor
