Try update the remote for scrutinizer.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "docs"]
 	path = docs
-	url = git@github.com:code-drop/Circle-CLI.git
+	url = https://github.com/code-drop/Circle-CLI.git
 	branch = gh-pages
