--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     "symfony/console": "2.6.*",
     "symfony/yaml": "2.6.*",
     "guzzlehttp/guzzle": "~5.0",
-    "pimple/pimple": "~3.0"
+    "pimple/pimple": "~3.0",
+    "symfony/event-dispatcher": "2.6.*"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.0",
